src/n.css
notification-box .height-container {
  pointer-events: none;
}
notification-box .main {
  margin-bottom: 0.625em;
  width: 20.25em;
  height: 3.9375em;
  background: #f0f0f0;
  border-radius: 5px;
  box-shadow: 0 0 17px rgba(0, 0, 0, 0.25);

  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
-webkit-align-items: center;
     -ms-flex-align: center;
        align-items: center;

  border-radius: 5px;
  font-family: 'Helvetica Neue', Helvetica, 'Lucida Grande',sans-serif;
  font-family: -apple-system, 'Helvetica Neue', Helvetica, 'Lucida Grande',sans-serif;
  overflow: hidden;
  cursor: default;

  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  position: relative;

  -webkit-animation: njs-show-notification 1s;
          animation: njs-show-notification 1s;
}

notification-box .main .icon {
  width: 32px;
  height: 32px;
  margin-left: 0.6em;
  background-size: contain;
}

notification-box .main .msg {
  margin-left: 0.6em;
}
notification-box .main .msg :not(:last-child) {
  margin-bottom: 0.25em;
}
notification-box .main .title {
  font-size: 0.775em;
  font-weight: bold;
  line-height: 1.1em;
}
notification-box .main .subtitle {
  font-weight: bold;
  font-size: 0.7em;
}
notification-box .main .text {
  font-size: 0.7em;
}

notification-box .actions {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  width: 4.45em;
  min-width: 4.45em;
  overflow: hidden;
  pointer-events: auto;
}
notification-box .minimal.actions {
  transform: translateX(100%);
  position: absolute;
  opacity: 0;
  background: inherit;
  transition: all 0.4s;
  right: 0;
}
notification-box .main:hover .minimal.actions{
  box-shadow: 0 0 15px 5px #f0f0f0;
  transform: none;
  opacity: 1;
}
notification-box .actions .action {
  border: 0 solid #d9d9d9;
  border-left-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
  padding-top: 1px;
  font-size: .8em;
  font-weight: bold;
  color: #717171;
  text-align: center;
}
notification-box .actions .action:active {
  color: white;
  background: #006AEF
}
notification-box .actions .action:not(:last-child) {
  border-bottom-width: 1px;
}

@-webkit-keyframes njs-height-container-show {
  0% {
    height: 0;
    opacity: 0;
  }
  100% {
    height: 4.5625em;
    opacity: 1;
  }
}
@keyframes njs-height-container-show {
  0% {
    height: 0;
    opacity: 0;
  }
  100% {
    height: 4.5625em;
    opacity: 1;
  }
}

notification-box .height-container {
  -webkit-animation: njs-height-container-show 1s;
          animation: njs-height-container-show 1s;
}

@-webkit-keyframes njs-height-container-hide {
  0% {
    height: 4.5625em;
    opacity: 1;
  }
  50% {
    height: 4.5625em;
    opacity: 0;
  }
  100% {
    opacity: 0;
    height: 0;
  }
}
@keyframes njs-height-container-hide {
  0% {
    height: 4.5625em;
    opacity: 1;
  }
  50% {
    height: 4.5625em;
    opacity: 0;
  }
  100% {
    opacity: 0;
    height: 0;
  }
}
notification-box .height-container.hide {
  -webkit-animation: njs-height-container-hide 400ms;
          animation: njs-height-container-hide 400ms;
}


@-webkit-keyframes njs-show-notification {
  0% {
    -webkit-transform: translateX(100%);
    transform: translateX(100%);
  }
  100% {
    -webkit-transform: none;
    transform: none;
  }
}

@keyframes njs-show-notification {
  0% {
    -webkit-transform: translateX(100%);
    transform: translateX(100%);
  }
  100% {
    -webkit-transform: none;
    transform: none;
  }
}

